# stormcrow_weather

./: Cargo.toml  README.md
src/: airmar.rs  airmar_consumer.rs  airmar_interpreter.rs  logger.rs  main.rs  weather_packet.rs
src/airmar/: interpreter.rs  models.rs  nmea_sentence.rs  sensor.rs  sensor_mock.rs  trait_airmar.rs
src/airmar_consumer/: consume.rs  models.rs
src/airmar_interpreter/: models.rs
src/weather_packet/: packet.rs  site_id.rs
