[package]
name = "stormcrow_weather"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
nmea = "0.7.0"
once_cell = "1.21.3"
rand = "0.9.2"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.5"
[dependencies.utils]
git = "ssh://git@github.com/nate-norris/stormcrow_utils.git"
package = "stormcrow_utils"
tag = "v0.1.26"
features = ["mm2t-tx"]
